--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -4,10 +4,11 @@
     position: absolute;
     margin-left: 10%;
     margin-top: 3%;
+    color: rgb(255, 255, 255);
+
 }
 .about-proj p{
     position: absolute;
-    color: white;
     top: 100px;
     font-size: 24px;
     left: 12%;
@@ -15,7 +16,6 @@
 .about-proj div{
     width: 48%;
     position: absolute;
-    color: white;
     top: 180px;
     font-size: 16px;
     left: 12%;
@@ -24,7 +24,9 @@
     position: absolute;
     width: 58%;
     height: 200px;
-    background-color: rgba(161, 158, 168, 0.5);
+    /* background-color: rgba(161, 158, 168, 0.5); */
+    background-color: #385191;
+    opacity: 0.8;
     z-index: -1;
     top: 100px;
     left: 6%;
@@ -33,7 +35,6 @@
 }
  .contact_us_title{
     position: absolute;
-    color: white;
     top: 100px;
     font-size: 24px;
     left: 70%;
@@ -41,7 +42,6 @@
 .about-proj-mail div{
     width: 48%;
     position: absolute;
-    color: white;
     top: 200px;
     font-size: 24px;
     left: 70%;
@@ -51,7 +51,9 @@
     position: absolute;
     width: 25%;
     height: 200px;
-    background-color: rgba(161, 158, 168, 0.5);
+    /* background-color: rgba(161, 158, 168, 0.5); */
+    background-color: #385191;
+    opacity: 0.8;
     z-index: -1;
     top: 100px;
     left: 68%;
@@ -60,43 +62,43 @@
 }
 .mail{
     position: absolute;
-    color: white;
     top: 150px;
     font-size: 22px;
     left: 70%;
 }
-.dev-title{
+
+.about-proj-security-bg{
     position: absolute;
-    color: white;
-    top: 350px;
-    font-size: 24px;
-    left: 10%;  
+    width: 87%;
+    height: 5000px;
+    /* background-color: rgba(161, 158, 168, 0.5); */
+    background-color: #385191;
+    opacity: 0.8;
+    z-index: -1;
+    top: 380px;
+    left: 6%;
+    border: 2px rgba(48, 27, 90, 0.5) solid;
+    border-radius: 20px;
 }
-.developers-box{
+
+.about-proj-security{
+    text-align: justify;
     position: absolute;
-    top: 440px;
-    left: 5%;
-    color: white;
-    display: flex;
+    width: 70%;
+    top: 420px;
+    left: 14.5%;
 }
-.developers-box div{
-    width: 300px;
-    display: flex;
-    margin-right: 10%;
-}
-.developers-box div div{
-    width: 300px;
-    display: block;
-}
-.img{
-    margin: 10px;
-}
-.name{
-    font-size: 20px;
-}
-.dev-info{
-    font-size: 18px;
-}
-.user-name:hover {
-    text-decoration: underline;
+
+
+.about-proj-mail-bottom{
+    padding: 15px;
+    padding-top: 5px;
+    position: absolute;
+    width: 35%;
+    height: 180px;  
+    color: black;
+    top: 4700px;
+    background-color: rgba(228, 226, 226, 0.5);
+    border: 2px rgba(255, 255, 255, 0.5) solid;
+    border-radius: 20px;
 }
