--- a/main/main.css
+++ b/main/main.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 /* main-content */
 
 .main-content{
@@ -59,68 +63,6 @@
 }
 /* logo end */
 
-/* .user-window{
-    width: 230px;
-    height: 100px;
-    position: absolute;
-    background-color: #385191;
-    border-radius: 20px;
-    padding: 20px;
-    top: 100px;
-    left: 75%;
-    text-align: center;
-    border: 2px rgb(193, 191, 191) solid;
-}
-.user-window p{
-    position: absolute;
-    top: 5%;
-    left: 37%;
-    color: white;
-    font-size: 18px;
-}
-.user-window .user-icon{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    left: 30px;
-    top: 30px;
-}
-.user-window button{
-    position: absolute;
-    top: 65%;
-    left: 30%;
-    padding: 7px 10px 7px 10px;
-    background-color: #C63131;
-    color: white;
-    border-radius: 10px;
-}
-.user-window span{
-    color: white;
-    font-size: 16px;
-    position: absolute;
-    top: 35%;
-    left: 40%;
-}
-.user-window span img{
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    left: 120%;
-}
-.settings-icon{
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 64%;
-    left: 70%;
-    
-}
-.tringle-icon{
-    position: absolute;
-    top: -37px;
-    left: 160px;
-    z-index: -1;
-} */
 /* book */
 .book-container{
     width: 400px; 
@@ -230,7 +172,10 @@
     font-weight: 400;
     text-decoration: none;
 }
-
+#second-part{
+    position: absolute;
+    top: 3200px;
+}
 /* mini-navbar end */
 
 .part-three{
@@ -304,9 +249,11 @@
     left: 0px; 
     top: 0px; 
     position: absolute; 
-    background: #5B0E12; 
     border-radius: 15px; 
-    border: 1px #FF0000 solid
+    background: #5B0E12; 
+    border: 1px #FF0000 solid;
+
+
 }
 .first-title-box-title{
     width: 820.53px; 
@@ -330,7 +277,6 @@
     word-wrap: break-word
 }
 .image-container{
-    /* width: 1441px;  */
     height: 898px; 
     padding-bottom: 11px; 
     left: 25px; 
@@ -369,8 +315,8 @@
     top: 24px; 
     position: absolute; 
     text-align: right; 
-    background-color: #5B0E12;
     border-radius: 15px; 
+    background-color: #5B0E12;
     border: 1px #FF0000 solid; 
     padding: 20px 80px;
 }
@@ -380,8 +326,8 @@
     top: 24px; 
     position: absolute; 
     text-align: right; 
-    background-color: #5B0E12;
     border-radius: 15px; 
+    background-color: #5B0E12;
     border: 1px #FF0000 solid; 
     padding: 20px 80px; 
     opacity: 0.65;
@@ -411,6 +357,17 @@
     align-items: center; 
     display: inline-flex
 }
+.third-part{
+    width: 1126px; 
+    height: 202px; 
+    left: 0px; 
+    top: 0px; 
+    position: absolute; 
+    opacity: 0.60; 
+    background: #5B0E12; 
+    border: 1px #FF0000 solid;
+    border-radius: 15px; 
+}
 .before-comments{
     width: 315px; 
     height: 51px; 
@@ -419,58 +376,36 @@
     position: absolute; 
     padding-left: 660px;
     color: white; 
+    /* color: #181616; */
     font-size: 20px; 
     font-family: Noto Sans Armenian; 
     font-weight: 400; 
     word-wrap: break-word
 }
-.comments-box{
-    width: 315px; 
-    height: 51px; 
-    left: 20%; 
-    top: 4000px; 
-    position: absolute
-}
-.comments{
-    width: 205.02px; 
-    left: 0px; 
-    top: 32px; 
+.hover-div{
     position: absolute; 
-    color: white; 
-    font-size: 14px; 
-    font-family: Noto Sans Armenian; 
-    font-weight: 400; 
-    word-wrap: break-word
+    width: 100%; 
+    height: 100%; 
+    background-color: #5B0E12; 
+    padding-top: 10px;
+    border: 3.5px white solid; 
+    box-shadow : 0px 0px 10px white;
+    /*width: 410px;
+    height: 160px;
+    top: 4868px;
+    left: 680px */
 }
-.comments-title{
-    width: 267.12px; 
-    left: 47.31px; 
-    top: -0px; 
+.light-hover-div{
     position: absolute; 
-    color: white; 
-    font-size: 20px; 
-    font-family: Noto Sans Armenian; 
-    font-weight: 400; 
-    word-wrap: break-word
+    width: 100%; 
+    height: 100%; 
+    top: -250px;
+    background: #0e355c; 
+    padding-top: 10px;
+    border: 3.5px white solid; 
+    box-shadow : 0px 0px 10px white
 }
-.comments-input-box{
-    width: 781.63px; 
-    height: 98.50px; 
-    left: 8px; 
-    top: 100.31px;
-    position: absolute
-}
-.comments-input{
-    width: 660px; 
-    padding: 15px; 
-    left: 57.17px; 
-    top: 24.75px; 
-    position: absolute; 
-    background: white; 
-    border-radius: 10px; 
-    border: 3px white solid;
-    resize: none;
-}
+
 .user-icon{
     width: 44.36px; 
     height: 48.10px; 
@@ -500,49 +435,57 @@
     word-wrap: break-word;
     text-decoration: none;
 }
-.good-new-old-box{
-    width: 133.06px; 
-    height: 22px; 
-    left: 65%; 
-    top: 4200px; 
-    position: absolute;
-}
-.good-com{
-    width: 42px; 
-    left: 0px; 
-    top: 0px; 
-    position: absolute; 
-    color: #C63131; 
-    font-size: 16px; 
-    font-family: Noto Sans Armenian; 
-    font-weight: 400; 
-    word-wrap: break-word
-}
-.new-com{
-    width: 47px; 
-    left: 46.95px; 
-    top: -0px; 
-    position: absolute; 
-    color: #4056A2; 
-    font-size: 16px; 
-    font-family: Noto Sans Armenian; 
-    font-weight: 400; 
-    word-wrap: break-word
-}
-.old-com{
-    width: 37.46px; 
-    left: 95.61px; 
-    top: 0px; 
-    position: absolute; 
-    color: #4056A2; 
-    font-size: 16px; 
-    font-family: Noto Sans Armenian; 
-    font-weight: 400; 
-    word-wrap: break-word
-}
+
 .user-name:hover {
     text-decoration: underline;
 }
+
+/* written comments */
+
+.comm-container{
+    color: aliceblue;
+    /* color: #181616; */
+    width: 700px;
+    position: absolute;
+    top: 5400px;
+    left:25%;
+    padding: 20px;
+    max-height: 600px; 
+    overflow-y: auto;
+}
+
+.com-username {
+    font-weight: bold;
+    margin-right: 10px;
+    color: #5EA8FF;
+}
+
+.comment-details {
+    margin-bottom: 10px;
+}
+
+.com-time {
+    font-size: 14px;
+    color: #777;
+}
+
+.com-comment {
+    margin-top: 5px;
+}
+
+.likes-box{
+    display: flex;
+}
+
+.likes {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    cursor: pointer;
+    margin-right: 10px; 
+}
+
+
 
 /* statistic */
 .statistic_window{
@@ -603,10 +546,62 @@
     background-color:#a43838;
     cursor: pointer;
 }
-#second-part{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: #ffffff;
-    z-index: 1000;
+
+.general-image-container img{
+    width: 1441px; 
+    height: 887px; 
+    box-shadow: 7px 7px 7px; 
+    filter: blur(7px)
 }
+
+/* lessons */
+
+.content-container{
+    width: 1393px; 
+    height: 1832px; 
+    left: 46px; 
+    top: 380px; 
+    position: absolute; 
+    opacity: 0.70;
+}
+.lesson-box{
+    height:400px;
+    max-height: 400px;
+    overflow-y: auto; 
+    font-size:16px;
+    padding:10px;
+    position: relative; 
+    background: black; 
+    color:white; 
+    border-radius: 15px;
+    left: 2.5%; 
+    margin-left: 5px;
+    margin-bottom: 7%; 
+    padding-top:30px;
+    
+}
+.lessonTitle{
+    text-decoration: none; 
+    color:white;
+}
+.lessonTitle:hover{
+    text-decoration: underline;
+}
+
+.lesson-title{
+    height: 67px;
+    position: absolute; 
+    color: #FFE7AA; 
+    margin-left: 3.5%; 
+    font-size: 24px; 
+    font-family: Noto Sans Armenian; 
+    font-weight: 400;
+    word-wrap: break-word; 
+    text-align: center; 
+    background-color: black; 
+    border:2px white solid;
+    padding-top: 5px; 
+    border-radius: 10px
+}
+
+
