--- a/testing_page/testing_page.css
+++ b/testing_page/testing_page.css
@@ -1,4 +1,12 @@
-.content{
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(6, 4, 28);
+
+}
+
+#quiz-container {
     position: absolute;
     margin-left: 20%;
     top: 18%;
@@ -7,7 +15,87 @@
     background: rgb(213, 221, 221); 
     border-radius: 20px;
     box-shadow: 0px 0px 10px 10px rgb(255, 255, 255);
+    z-index: -1;
 }
+
+h1 {
+    text-align: center;
+}
+
+#question {
+     position: absolute;
+    top: 110px;
+    width: 500px;
+    height: 50px;
+    left: 20%;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+#answers {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20%;    
+    margin-top: 20%
+}
+/* #answers div:hover{
+    border: 3px rgb(214, 182, 36) solid;
+    box-shadow: 0px 0px 5px 5px rgb(199, 158, 10);
+} */
+
+#answers div {
+    width: 500px;
+    height: 40px;
+    font-size: 16px;    
+    border: 4px black solid;
+    border-radius: 10px;
+    padding: 10px 10px 0px 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+#next-btn {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+.start-box{
+    position: absolute;
+    top: 260px;
+    left: 33%;
+    width: 500px;
+    height: 200px;
+    background-color: #7e9bb1;
+    border-radius: 15px;
+    padding-top: 140px;
+    text-align: center;
+    filter: blur(0.8px);
+    border: 2px #0A1D2C solid;
+    opacity: 0.96;
+}
+.start-box-title{
+    position: absolute;
+    top: 330px;
+    left: 40%;
+    font-size: 46px;
+}
+#start-btn{
+    position: absolute;
+    top: 450px;
+    left: 46%;
+    font-size: 24px;
+    border-radius: 10px;
+    padding: 10px 15px 10px 15px;
+    background-color: rgb(205, 201, 201);
+}
+
 .timer-title{
     left: 20px; 
     top: 7px; 
@@ -20,8 +108,8 @@
 .timer{
     width: 62px; 
     height: 33px; 
-    left: 127px;    
-    top: 5px; 
+    left: 100px;    
+    top: 0px; 
     position: absolute; 
     background: #0A1D2C; 
     color: white;
@@ -34,7 +122,7 @@
     width: 195px; 
     height: 50px; 
     left: 0px; 
-    top: 0px; 
+    top: 20px; 
     position: absolute; 
     background: #487292; 
     border-radius: 15px
@@ -56,31 +144,6 @@
     position: absolute;
     width: 99.8%;
     top: 80px;
-}
-.questions{
-    position: absolute;
-    top: 110px;
-    width: 500px;
-    height: 50px;
-    left: 20%;
-    font-size: 24px;
-}
-.answer{
-    width: 500px;
-    height: 50px;
-    position: absolute;
-    top: 180px;
-    left: 20%;
-    font-size: 16px;
-    border: 4px black solid;
-    border-radius: 10px;
-    padding: 10px 10px 0px 10px;
-}
-.answer:hover{
-    border: 3px rgb(214, 182, 36) solid;
-    box-shadow: 0px 0px 5px 5px rgb(199, 158, 10);
-    /* box-shadow: 0px 0px 5px 5px rgb(236, 69, 14); */
-
 }
 .count-of-answers{
     position: absolute;
@@ -108,39 +171,49 @@
     font-size: 18px;
     border-radius: 15px;
 }
-.start-box{
-    position: absolute;
-    top: 160px;
-    left: 21.5%;
-    width: 500px;
-    height: 200px;
-    background-color: #7e9bb1;
-    border-radius: 15px;
-    padding-top: 140px;
-    text-align: center;
-    filter: blur(0.8px);
-    border: 2px #0A1D2C solid;
-    opacity: 0.96;
+
+.answer-option {
+    border: 3px solid transparent; 
+    box-shadow: 0px 0px 5px 5px transparent; 
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+
 }
-.start-box-title{
-    position: absolute;
-    top: 230px;
-    left: 33%;
-    font-size: 46px;
+
+.correct {
+    border-color: rgb(142, 197, 58);
+    box-shadow: 0px 0px 5px 5px rgb(98, 199, 10);
 }
-.start-btn{
+
+.wrong {
+    border-color: rgb(236, 69, 14); 
+    box-shadow: 0px 0px 5px 5px rgb(236, 69, 1);
+}
+
+.end-box-window p{
     position: absolute;
-    top: 360px;
-    left: 43%;
-    font-size: 24px;
-    border-radius: 10px;
-    padding: 10px 15px 10px 15px;
-    background-color: rgb(205, 201, 201);
+    left: 35%;
+    color: #fff;
+    font-size: 18px;    
+    z-index: 1000;
+
+}
+#correct-count{
+    top: 25%;
+
+}
+#wrong-count{
+    top: 30%;
+
+}
+#percentage{
+    top: 35%;
+
+
 }
 .end-box{
     position: absolute;
-    top: 310px;
-    left: 33%;
+    margin-left: 21%;
+    top: 19%;
     width: 500px;
     height: 200px;
     background-color: #62788a;
@@ -150,41 +223,68 @@
     filter: blur(0.8px);
     border: 2px #0A1D2C solid;
     opacity: 0.96;
-}
-.end-box-title{
-    position: absolute;
-    top: 370px;
-    left: 44%;
-    font-size: 50px;
-    color: white;
+    z-index: 1;
 }
 .end-min-title{
+    width: 350px;
+    word-wrap: break-word;
+    text-align: center;
     position: absolute;
-    top: 450px;
-    left: 38%;
+    top: 300px;
+    left: 30%;
     font-size: 24px;
     color: white;
+    z-index: 1000;
+
 }
 .end-went-btn{
     position: absolute;
-    top: 520px;
+    top: 380px;
     padding: 10px 20px 10px 20px;
-    left: 39%;
+    left: 30%;
     background-color: #487292;
     color: white;
     font-size: 18px;
     border-radius: 15px;
+    z-index: 1000;
+
 }
 .end-start-btn{
     position: absolute;
-    top: 520px;
+    top: 380px;
     left: 50%;
     font-size: 18px;
     border-radius: 10px;
     padding: 10px 15px 10px 15px;
     background-color: green;
     color: white;
+    z-index: 1000;
+
 }
-.user-name:hover {
-    text-decoration: underline;
+#progress-bar-bg, .progress-percent{
+    border: 4px black solid;
+    border-radius: 20px;
+    width: 50%;
+    position: absolute;
+    top: 160px;
+    left: 20%;
+    height: 10px;
+    z-index: 0;
+}
+
+#progress-bar{
+    border-radius: 20px;
+    width: 0%;
+    position: absolute;
+    top: 162px;
+    left: 20%;
+    height: 12px;
+    background-color: green;   
+    z-index: -1; 
+}
+
+.progress-percent{
+    left: 72%;
+    border: none;
+    font-size: 20px;
 }
