--- a/lessons/lesson_page.css
+++ b/lessons/lesson_page.css
@@ -210,7 +210,7 @@
     background-color:#509ACB; 
     padding: 20px;
     border-radius: 10px; 
-    box-shadow: 5px 5px 5px 3px rgb(72, 71, 71);
+    /* box-shadow: 5px 5px 5px 3px rgb(72, 71, 71); */
 }
 .second-i-box{
     width: 343px; 
@@ -226,7 +226,7 @@
     padding: 20px;
     border-radius: 10px; 
     z-index: 1;
-    box-shadow: 5px 5px 5px 3px rgb(72, 71, 71);
+    /* box-shadow: 5px 5px 5px 3px rgb(72, 71, 71); */
 
 }
 .i-icon{
@@ -401,7 +401,7 @@
     width: 44.36px; 
     height: 48.10px; 
     left: 0px; 
-    top: 0px; 
+    top: 30px; 
     position: absolute; 
     background: #5EA8FF; 
     border-radius: 5px; 
@@ -548,7 +548,7 @@
     font-weight: 400; 
     word-wrap: break-word; 
     background: #509ACB; 
-    box-shadow: -9px 9px 4px rgba(0, 0, 0, 0.65); 
+    /* box-shadow: -9px 9px 4px rgba(0, 0, 0, 0.65);  */
     border-radius: 10px;
     padding: 15px;
 }
@@ -563,7 +563,7 @@
     font-weight: 400; 
     word-wrap: break-word;
     background: #509ACB; 
-    box-shadow: 9px 9px 4px rgba(0, 0, 0, 0.65); 
+    /* box-shadow: 9px 9px 4px rgba(0, 0, 0, 0.65);  */
     border-radius: 10px;
     padding: 15px;
 }
