--- a/main/main.css
+++ b/main/main.css
@@ -1,7 +1,10 @@
 html{
     scroll-behavior: smooth;
 }
-
+*{
+    margin: 0;
+    padding: 0;
+  }
 /* main-content */
 
 .main-content{
@@ -10,17 +13,40 @@ html{
 }
 
 
-.content {
+/* .content {
     height: 100%;
     position: relative;
     padding-top: 7%;
+} */
+.content {
+    position: relative;
+    width: 100%;
+    height: 1000px;
+    overflow: hidden; /* Ensure the content is not visible outside of the container */
 }
 
-.main-image{
-    width: 100%; 
-    height: auto; 
-    box-shadow: 7px 7px 7px; 
-    filter: blur(7px);
+.background-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.background-slide img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure images cover the entire container */
+    opacity: 0;
+    transition: opacity 1s ease-in-out; /* Smooth transition effect */
+}
+
+.main-image {
+    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+    filter: blur(7px); /* Apply blur effect */
 }
 
 /* logo */
@@ -73,7 +99,8 @@ html{
     flex-direction: column; 
     justify-content: center; 
     align-items: center; 
-    display: inline-flex
+    display: inline-flex;
+    border: 4px black solid;
 }
 
 .book-background{
@@ -142,12 +169,10 @@ html{
     position: absolute;
     opacity: 0.70;
     background: black;
-    box-shadow: -8px 4px 4px rgba(255, 255, 255, 0.25);
     border-radius: 10px;
 }
 
 .mini-navbar-background-overlay {
-    /* width: 100%; */
     height: 100%;
     position: absolute;
 }
@@ -209,7 +234,6 @@ html{
     position: absolute; 
     opacity: 0.70; 
     background: black; 
-    box-shadow: 7px 7px 4px rgba(255, 255, 255, 0.25); 
     border-radius: 15px
 }
 .open-box-title{
@@ -246,7 +270,7 @@ html{
 .first-title-box-bground{
     width: 1040px; 
     height: 202px; 
-    left: 0px; 
+    left: 90px; 
     top: 0px; 
     position: absolute; 
     border-radius: 15px; 
@@ -257,7 +281,7 @@ html{
 }
 .first-title-box-title{
     width: 820.53px; 
-    left: 85.51px; 
+    left: 180px; 
     top: 13px; 
     position: absolute
 }
@@ -311,7 +335,7 @@ html{
 }
 .second-title-box-bground{
     width: 633px; 
-    left: 100px; 
+    left: 0px; 
     top: 24px; 
     position: absolute; 
     text-align: right; 
@@ -346,21 +370,11 @@ html{
     font-weight: 400; 
     word-wrap: break-word
 }
-.second-content-container{
-    width: 338px; 
-    height: 396px; 
-    left: 46px; 
-    top: 102px; 
-    position: absolute; 
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-    display: inline-flex
-}
+
 .third-part{
-    width: 1126px; 
+    width: 1000px; 
     height: 202px; 
-    left: 0px; 
+    left: 90px; 
     top: 0px; 
     position: absolute; 
     opacity: 0.60; 
@@ -372,29 +386,51 @@ html{
     width: 315px; 
     height: 51px; 
     left: 15%; 
-    top: 3940px; 
+    top: 3000px; 
     position: absolute; 
     padding-left: 660px;
     color: white; 
-    /* color: #181616; */
     font-size: 20px; 
     font-family: Noto Sans Armenian; 
     font-weight: 400; 
     word-wrap: break-word
 }
 .hover-div{
+    position: relative;
+    width: 45vh;
+    color: white; 
+    font-size: 14px; 
+    font-family: Noto Sans Armenian; 
+    font-weight: 400 ;
+    top: 325vh;
+    left: 80vh;
+}
+.hover-div-bg{
     position: absolute; 
-    width: 100%; 
-    height: 100%; 
+    width: 30%; 
+    height: 200px; 
     background-color: #5B0E12; 
     padding-top: 10px;
     border: 3.5px white solid; 
     box-shadow : 0px 0px 10px white;
-    /*width: 410px;
-    height: 160px;
-    top: 4868px;
-    left: 680px */
+    top: 320vh;
+    left: 75vh;
 }
+.hover-img{
+    width: 50px; 
+    height: 50px; 
+    position: absolute; 
+    left: 77%;
+    bottom: -11.7vh;
+}
+.comments-box{
+    width: 315px; 
+    height: 51px; 
+    left: 20%; 
+    top: 3020px; 
+    position: absolute
+}
+
 .light-hover-div{
     position: absolute; 
     width: 100%; 
@@ -410,17 +446,18 @@ html{
     width: 44.36px; 
     height: 48.10px; 
     left: 0px; 
-    top: 0px; 
+    top: 30px; 
     position: absolute; 
     background: #5EA8FF; 
     border-radius: 5px; 
     text-align: center; 
     font-size: 42px;
 }
+
 .comments-write-box{
     width: 781.63px; 
     height: 98.50px; 
-    left: 10%px; 
+    left: 6%; 
     top: 100.31px; 
     position: absolute
 }
@@ -442,18 +479,13 @@ html{
 
 /* written comments */
 
-.comm-container{
-    color: aliceblue;
-    /* color: #181616; */
-    width: 700px;
-    position: absolute;
-    top: 5400px;
-    left:25%;
-    padding: 20px;
-    max-height: 600px; 
+.comm-box{
+    width: 100%;
+    min-height: 700px;
+    max-height: 620px;
     overflow-y: auto;
+    margin-left: 25vh;
 }
-
 .com-username {
     font-weight: bold;
     margin-right: 10px;
@@ -533,6 +565,7 @@ html{
     background-color: #4056A2;
     color: aliceblue;
     border-radius: 7px;
+    padding: 5px;
 }
 .statistic_window_close_btn{
     border: 2px white solid;
@@ -580,6 +613,27 @@ html{
     padding-top:30px;
     
 }
+.fa-comment-dots{
+    color: #B197FC; 
+    font-size:30px;
+    padding-top: 20px;
+}
+.lesson-box2{
+    height:400px;
+    max-height: 400px;
+    overflow-y: auto; 
+    font-size:16px;
+    padding:10px;
+    position: relative; 
+    background: black; 
+    color:white; 
+    border-radius: 15px;
+    left: 2.5%; 
+    margin-left: 5px;
+    margin-bottom: 7%; 
+    padding-top:30px;
+}
+
 .lessonTitle{
     text-decoration: none; 
     color:white;
@@ -602,6 +656,24 @@ html{
     border:2px white solid;
     padding-top: 5px; 
     border-radius: 10px
+}
+
+.lesson-title2{
+    height: 67px;
+    position: absolute; 
+    color: #FFE7AA; 
+    margin-left: 3.5%; 
+    font-size: 24px; 
+    font-family: Noto Sans Armenian; 
+    font-weight: 400;
+    word-wrap: break-word; 
+    text-align: center; 
+    background-color: black; 
+    border:2px white solid;
+    padding-top: 5px; 
+    border-radius: 10px;
+    margin-top: 10%;
+
 }
 
 
