--- a/testing_page/testing_page.css
+++ b/testing_page/testing_page.css
@@ -288,3 +288,365 @@ h1 {
     border: none;
     font-size: 20px;
 }
+
+
+
+
+/* --------- */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(6, 4, 28);
+
+}
+
+#quiz-container {
+    position: absolute;
+    margin-left: 20%;
+    top: 18%;
+    width: 937px; 
+    height: 640px; 
+    background: rgb(213, 221, 221); 
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 10px rgb(255, 255, 255);
+    z-index: -1000;
+}
+
+h1 {
+    text-align: center;
+}
+
+#question {
+     position: absolute;
+    top: 110px;
+    width: 500px;
+    height: 50px;
+    left: 20%;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+#answers {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20%;    
+    margin-top: 20%
+}
+/* #answers div:hover{
+    border: 3px rgb(214, 182, 36) solid;
+    box-shadow: 0px 0px 5px 5px rgb(199, 158, 10);
+} */
+
+#answers div {
+    width: 500px;
+    height: 40px;
+    font-size: 16px;    
+    border: 4px black solid;
+    border-radius: 10px;
+    padding: 10px 10px 0px 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+#next-btn {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+.start-box{
+    position: absolute;
+    top: 260px;
+    left: 33%;
+    width: 500px;
+    height: 200px;
+    background-color: #7e9bb1;
+    border-radius: 15px;
+    padding-top: 140px;
+    text-align: center;
+    filter: blur(0.8px);
+    border: 2px #0A1D2C solid;
+    opacity: 0.96;
+}
+.start-box-title{
+    position: absolute;
+    top: 330px;
+    left: 40%;
+    font-size: 46px;
+}
+#start-btn{
+    position: absolute;
+    top: 450px;
+    left: 46%;
+    font-size: 24px;
+    border-radius: 10px;
+    padding: 10px 15px 10px 15px;
+    background-color: rgb(205, 201, 201);
+}
+
+.timer-title{
+    left: 20px; 
+    top: 7px; 
+    position: absolute; 
+    color: white; 
+    font-size: 24px; 
+    font-weight: 400; 
+    word-wrap: break-word
+}
+.timer{
+    width: 62px; 
+    height: 33px; 
+    left: 100px;    
+    top: 0px; 
+    position: absolute; 
+    background: #0A1D2C; 
+    color: white;
+    border-radius: 12px;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 3%;
+}
+.timer-back{
+    width: 195px; 
+    height: 50px; 
+    left: 0px; 
+    top: 20px; 
+    position: absolute; 
+    background: #487292; 
+    border-radius: 15px
+}
+.timer-box{
+    width: 100%; 
+    height: 100%; 
+    position: relative;
+    left: 72%;
+    top: 3%;
+}
+.test-title{
+    position: absolute;
+    font-size: 24px;
+    top:5% ;
+    left: 10%;
+}
+.first-hr{
+    position: absolute;
+    width: 99.8%;
+    top: 80px;
+}
+.count-of-answers{
+    position: absolute;
+    font-size: 24px;
+    top: 560px;
+    left: 44%
+}
+.next-btn{
+    position: absolute;
+    top: 550px;
+    padding: 10px 20px 10px 20px;
+    left: 68%;
+    background-color: green;
+    color: white;
+    font-size: 18px;
+    border-radius: 15px;
+}
+.went-btn{
+    position: absolute;
+    top: 550px;
+    padding: 10px 20px 10px 20px;
+    left: 15%;
+    background-color: #487292;
+    color: white;
+    font-size: 18px;
+    border-radius: 15px;
+}
+
+.answer-option {
+    border: 3px solid transparent; 
+    box-shadow: 0px 0px 5px 5px transparent; 
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+
+}
+
+.correct {
+    border-color: rgb(142, 197, 58);
+    box-shadow: 0px 0px 5px 5px rgb(98, 199, 10);
+}
+
+.wrong {
+    border-color: rgb(236, 69, 14); 
+    box-shadow: 0px 0px 5px 5px rgb(236, 69, 1);
+}
+
+.end-box-window p{
+    position: absolute;
+    left: 35%;
+    color: #fff;
+    font-size: 18px;    
+    z-index: 1000;
+
+}
+#correct-count{
+    top: 25%;
+
+}
+#wrong-count{
+    top: 30%;
+
+}
+#percentage{
+    top: 35%;
+
+
+}
+.end-box{
+    position: absolute;
+    margin-left: 21%;
+    top: 19%;
+    width: 500px;
+    height: 200px;
+    background-color: #62788a;
+    border-radius: 15px;
+    padding-top: 140px;
+    text-align: center;
+    filter: blur(0.8px);
+    border: 2px #0A1D2C solid;
+    opacity: 0.96;
+    z-index: 1;
+}
+.end-min-title{
+    width: 350px;
+    word-wrap: break-word;
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    left: 30%;
+    font-size: 24px;
+    color: white;
+    z-index: 1000;
+
+}
+.end-went-btn{
+    position: absolute;
+    top: 380px;
+    padding: 10px 20px 10px 20px;
+    left: 30%;
+    background-color: #487292;
+    color: white;
+    font-size: 18px;
+    border-radius: 15px;
+    z-index: 1000;
+
+}
+.end-start-btn{
+    position: absolute;
+    top: 380px;
+    left: 50%;
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 10px 15px 10px 15px;
+    background-color: green;
+    color: white;
+    z-index: 1000;
+
+}
+#progress-bar-bg, .progress-percent{
+    border: 4px black solid;
+    border-radius: 20px;
+    width: 50%;
+    position: absolute;
+    top: 160px;
+    left: 20%;
+    height: 10px;
+    z-index: 0;
+}
+
+#progress-bar{
+    border-radius: 20px;
+    width: 0%;
+    position: absolute;
+    top: 162px;
+    left: 20%;
+    height: 12px;
+    background-color: green;   
+    z-index: -1; 
+}
+
+.progress-percent{
+    left: 72%;
+    border: none;
+    font-size: 20px;
+}
+
+/* levels */
+
+.level{
+    width: 100px;
+    height: 100px;
+    /* background-color: #007bff; */
+    position: absolute;
+    top: 50vh;
+}
+
+.first-level{
+    top: 36vh;
+    left: 15vh;
+}
+
+.second-level{
+    top: 15vh;
+    left: 55vh;
+}
+.third-level{
+    top: 50vh;
+    left: 85vh;
+}
+
+.castle {
+    font-size: 100px;
+    background-color: none;
+}
+.castle:hover {
+    font-size: 100px;
+    background-color: none;
+}
+.line {
+    position: absolute;
+    top: 70vh;
+    width: 20px;
+    height: 10px;
+    background-color: green;
+    transform: rotate(-20deg);
+    z-index: -100;
+
+}
+
+.line-container {
+    position: absolute;
+    left: 35vh;
+    top: 18vh;
+    z-index: -1000;
+}
+.gamer {
+    width: 100px;
+    height: 100px;
+    z-index: 1000; 
+}
+.gamer-box{
+    position: relative;
+    top: 57vh;
+    left: -2vh;
+    width: 200px;
+    height: 200px;
+    z-index: 1000; 
+}
+.second-level, .third-level{
+    opacity: 0.4;
+}
