--- a/user_page/user_page.css
+++ b/user_page/user_page.css
@@ -1,13 +1,13 @@
-.user{
+/* .user{
     width: 250px;
-    /* background-color: aliceblue; */
     position: absolute;
     top: 150px;
     left: 25%;
-}
-.img-box img{
+    cursor: pointer;
+} */
+/* .img-box img{
     width: 110px;
-}
+} */
 .user-name{
     width: 150px;
     position: absolute;
@@ -16,25 +16,265 @@
     color: white;
     font-size: 18px;
     text-align: center;
+    cursor: pointer;
 }
 .user-name:hover {
     text-decoration: underline;
 }
-/* .write-user{
-    position: absolute;
-    top: 150%;
-    left: 6%;
-    padding: 5px 20px 5px 20px;
-    border-radius: 10px;
-    color: white;
-    background-color: green;
-} */
 .min-navbar{
     width: 500px;
     height: 100px;
-    /* background-color: aliceblue; */
     position: absolute;
     top: 150px;
     left: 39%;
 
+}
+.min-navbar span{
+    color: aliceblue;
+    margin-right: 10px;
+    text-decoration: none;
+    cursor: pointer;
+}
+.min-navbar span:hover{
+  text-decoration: underline;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+.drag-area{
+  /* border: 2px dashed #202020; */
+  width: 230px;
+  border-radius: 5px;
+  display: flex;
+  position: absolute;
+  left: 12%;
+  top: 34%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+}
+/* .drag-area.active{
+  border: 2px solid #202020;
+} */
+
+.drag-area header{
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+.drag-area span{
+  font-size: 15px;
+  font-weight: 500;
+  color: #fff;
+  margin: 10px 0 15px 0;
+}
+.drag-area button{
+  padding: 10px 25px;
+  font-size: 20px;
+  font-weight: 500;
+  border: none;
+  outline: none;
+  background: #5256ad;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 40px;
+}
+.drag-area img{
+  height: 10%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.card{
+  position: absolute;
+  left: 8%;
+  top: 25%;
+  width: 250px;
+  height: 350px;
+  background: #fff;
+  padding: 40px;
+  border-radius: 15px;
+  text-align: center;
+  color: #333;
+  box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
+  10px 10px 70px rgba(0, 0, 0, 0.25),
+  inset 5px 5px 10px rgba(0,0,0,0.5),
+  inset 5px 5px 20px rgba(255,255,255,0.2),
+  inset -5px -5px 15px rgba(0,0,0,0.75);
+}
+.card h1{
+  font-weight: 500;
+  color: #000;
+}
+
+.profile-img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+input[type="file"]  {
+  display: none;
+}
+
+/* comments */
+
+.comments{
+    display: block;
+    width: 450px;
+    height: 200px;
+    position: absolute;
+    top: 23%;
+    left: 35%;
+}
+.comment{
+    background-color: #5256ad;
+    margin: 20px;
+    padding: 17px;
+    border-radius: 20px;
+    box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
+    10px 10px 70px rgba(0, 0, 0, 0.25),
+    inset 5px 5px 10px rgba(0,0,0,0.5),
+    inset 5px 5px 20px rgba(255,255,255,0.2),
+    inset -5px -5px 15px rgba(0,0,0,0.75);
+
+}
+.close-comms{
+  width: 300px;
+  height: 300px;
+  background-color: #000;
+  position: absolute;
+  left: 20%;
+  top: 20%;
+}
+.show-com-btn{
+  background-color: #DBCC35;
+  color: #595757;
+  font-weight: 500;
+  padding: 10px;
+  margin-left: 20%;
+  border-radius: 10px;
+  box-shadow: 10px 10px 55px rgba(0, 0, 0, 0.25),
+  6px 6px 6px rgba(0, 0, 0, 0.25),
+  inset 5px 5px 10px rgba(33, 33, 33, 0.5),
+  inset 5px 5px 20px rgba(255,255,255,0.2),
+  inset -5px -5px 15px rgba(55, 55, 55, 0.75);
+}
+.pencil{
+  width: 20px;
+  height: 20px;
+}
+
+h2{
+  cursor: pointer;
+
+}
+.prof-user-img{
+  position: absolute;
+  left: 32%;
+  top: 15%;
+  font-size: 100px;
+}
+.upload-img{
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  object-fit: cover
+}
+.drag-area.uploaded .profile-img {
+  display: none;
+}
+
+.drag-area.uploaded .upload-img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.upload-icon{
+  position: absolute;
+  left: 85%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  top: 15px;
+  border-radius: 10px;
+}
+.changeContainer, .changePassContainer{
+  padding: 20px;
+  width: 720px;
+  height: 445px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
+    10px 10px 70px rgba(0, 0, 0, 0.25),
+    inset 5px 5px 10px rgba(0,0,0,0.5),
+    inset 5px 5px 20px rgba(255,255,255,0.2),
+    inset -5px -5px 15px rgba(0,0,0,0.75);
+  position: absolute;
+  left: 35%;
+  top: 24%;
+  
+}
+.changePassContainer{
+  padding-top: 5%;
+  width: 500px;
+  height: 350px;
+
+}
+.form-group{
+  display: flex;
+  justify-content: left;
+  padding-left: 40px;
+}
+.form-group input{
+  width: 60%;
+  margin: 20px 0;
+  padding: 10px;
+  padding-left: 10px;
+  border-radius: 10px;
+
+}
+.form-group label{
+  width: 20%;
+  padding-top: 15px;
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.btns{
+  display: flex;
+  justify-content: center;
+}
+.registerbtn{
+  background-color: green;
+  color: #fff;
+  width: 30%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 10px;
+  margin-right: 5%;
+  margin-top: 5%;
+
+}
+.changepassbtn{
+  background-color: rgb(210, 59, 0);
+  color: #fff;
+  width: 30%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 10px;
+  margin-left: 5%;
+  margin-top: 5%;
+}
+.forgotPassTitle{
+  text-align: center;
+  
 }
